--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>My Website</title>
 </head>
 <body>
-    <h1>hello world!</h1>>
+
+<!--Hero Section -->
+    <section id="hero"> 
+        <div class="hero container">
+            <div><h1>Hello, my name is Gosha</h1></div>
+            <a href="#" type="button" class="cta">HOME</a>
+        </div>
+    </section>
+    
     <p>paragraph of text</p>
     <button>button</button>
     <a href="https://github.com/Malgch/WebTech" target ="_blank">anchor element</a>
