front page modifications

--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>My Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
 </head>
 <body>
 
 <!--Hero Section -->
     <section id="hero"> 
         <div class="hero container">
-            <div><h1>Hello, my name is Gosha</h1></div>
-            <a href="#" type="button" class="cta">HOME</a>
+            <div><h1>We Design and Develop</h1>
+            <p class="p">We are a new design studio based in USA.</p>
+            <a href="#" type="button" class="home_button">HOME</a>
+            </div>            
+        </div>
+    </section>
+    <!-- hero end-->
+
+    <section id="about_us_front_page">
+        <div class="about_front">
+            <h1>About Us</h1>
         </div>
     </section>
     
