front page spacing

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <section id="hero"> 
         <div class="hero container">
             <div><h1>We Design and Develop</h1>
-            <p class="p">We are a new design studio based in USA.</p>
-            <a href="#" type="button" class="home_button">HOME</a>
+            <p class="p">We are a new design studio based in USA. We have over 20 years of combined experience,
+                and know a thing or two about designing websites and mobile apps.
+            </p>
+            <a href="#" type="button" class="home_button"><b>CONTACT US</b></a>
             </div>            
         </div>
     </section>
@@ -25,7 +27,11 @@
 
     <section id="about_us_front_page">
         <div class="about_front">
-            <h1>About Us</h1>
+            <div><h1>About Us</h1>
+            <p class="p">Divide have don't man wherein air fourth. Own itselt make have night won't make.
+                A you under Seed appear which good give. Own give air without fowl moveth dry first heaven fruit, dominion she'd won't very all.
+            </p>
+            </div>
         </div>
     </section>
     
