--- a/index.html
+++ b/index.html
@@ -12,18 +12,30 @@
 </head>
 <body>
 
-<!--Hero Section -->
-    <section id="hero"> 
-        <div class="hero container">
+<!--home Section -->
+    <section id="home"> 
+        <div class="home_buttons">
+            <a href="#" type="button" class="section_button"><b>HOME</b></a>
+            <a href="#" type="button" class="section_button"><b>ABOUT</b></a>
+            <a href="#" type="button" class="section_button"><b>WORK</b></a>
+            <a href="#" type="button" class="section_button"><b>PROCESS</b></a>
+            <a href="#" type="button" class="section_button"><b>SERVICES</b></a>
+            <a href="#" type="button" class="section_button"><b>TESTIMONIALS</b></a>
+            <a href="#" type="button" class="section_button"><b>CONTACT</b></a>
+        </div>
+        
+
+        <div class="home container">
             <div><h1>We Design and Develop</h1>
             <p class="p">We are a new design studio based in USA. We have over 20 years of combined experience,
                 and know a thing or two about designing websites and mobile apps.
             </p>
             <a href="#" type="button" class="home_button"><b>CONTACT US</b></a>
-            </div>            
+            </div>         
+               
         </div>
     </section>
-    <!-- hero end-->
+    <!-- home end-->
 
     <section id="about_us_front_page">
         <div class="about_front">
