--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!--home Section -->
     <section id="home"> 
         <div class="home_buttons"> 
-            <a href="TODO" type="button" class="logo_button"><img src="/images/logo_button_frontpage.jpg" alt="Logo"></a>          
+            <a href="TODO" type="button" class="logo_button"><img src="/images/logo.png" alt="Logo"></a>          
         <div class="section_buttons">        
             <a href="#" type="button" class="section_button"><b>HOME</b></a>
             <a href="#" type="button" class="section_button"><b>ABOUT</b></a>
@@ -44,11 +44,12 @@
 
 
     <section id="about_us_front_page">
-        <div class="about_front">
-            <div><h1>About Us</h1>
-            <p class="p">Divide have don't man wherein air fourth. Own itselt make have night won't make.
-                A you under Seed appear which good give. Own give air without fowl moveth dry first heaven fruit, dominion she'd won't very all.
-            </p>
+
+        <div class="about_container">
+            <div class="about_us"><h1 class="h1">About Us</h1>
+            <p class="p">Divide have don't man wherein air fourth. Own itselt make have night won't make.<br>
+                A you under Seed appear which good give. Own give air without fowl moveth dry first heaven fruit, dominion she'd won't very all.</p>
+            <div ><img class="signature" src="/images/signature.png"></div>
             </div>
         </div>
     </section>
