--- a/index.html
+++ b/index.html
@@ -46,11 +46,35 @@
     <section id="about_us_front_page">
 
         <div class="about_container">
-            <div class="about_us"><h1 class="h1">About Us</h1>
-            <p class="p">Divide have don't man wherein air fourth. Own itselt make have night won't make.<br>
+            <div class="about_us">
+                <h1 class="h1">About Us</h1>
+                <p class="p">Divide have don't man wherein air fourth. Own itselt make have night won't make.<br>
                 A you under Seed appear which good give. Own give air without fowl moveth dry first heaven fruit, dominion she'd won't very all.</p>
             <div ><img class="signature" src="/images/signature.png"></div>
             </div>
+        </div>
+    </section>
+
+    <section id="professional_skills">
+
+        <div class="professional_skills_container">
+            <div class="img-background"></div>
+            <div class="gradient"></div>
+            <div class="professional">
+                <h1 class="h1">Professional Skills</h1>
+                <p class="p">UI/UX DESIGN  75%</p>
+                    <div class="skill_container">
+                        <div class="skill UIUIX"></div>
+                    </div>
+                <p class="p">WEB DEVELOPMENT 90%</p>
+                    <div class="skill_container">
+                        <div class="skill web"></div>
+                    </div>
+                    <p class="p">MARKETING 65%</p>
+                    <div class="skill_container">
+                        <div class="skill marketing"></div>
+                    </div>
+                
         </div>
     </section>
     
