--- a/index.html
+++ b/index.html
@@ -82,14 +82,34 @@
 
         <div class="icons_container">
             <div class="icons_subcont">
-                <div class="single_icon">Ikonka</div>
+                <div class="single_icon"><img class="icon" src="/images/icon-portfolio.png"></div>
                 <div class="text">
-                    <p1>526</p1>
+                    <p1><b>526</b></p1>
                     <p2>PROJECTS COMPLETED</p2>
                 </div>
             </div>
-            <div>icon set 2</div>
-            <h1>bbbb</h1>
+            <div class="icons_subcont">
+                <div class="single_icon"><img class="icon" src="/images/icon-clock.png"></div>
+                <div class="text">
+                    <p1><b>1465</b></p1>
+                    <p2>WORKING HOURS</p2>
+                </div>
+            </div>
+            <div class="icons_subcont">
+                <div class="single_icon"><img class="icon" src="/images/icon-star.png"></div>
+                <div class="text">
+                    <p1><b>612</b></p1>
+                    <p2>POSITIVE FEEDBACK</p2>
+                </div>
+            </div>
+            <div class="icons_subcont">
+                <div class="single_icon"><img class="icon" src="/images/icon-like.png"></div>
+                <div class="text">
+                    <p1><b>735</b></p1>
+                    <p2>HAPPY CLIENTS</p2>
+                </div>
+            </div>
+            
         </div>
 
 
