--- a/index.html
+++ b/index.html
@@ -108,10 +108,16 @@
                     <p1><b>735</b></p1>
                     <p2>HAPPY CLIENTS</p2>
                 </div>
-            </div>
-            
+            </div>            
         </div>
+    </section>
 
+    <section id="products">
+        <div class="products-container">
+            <div class="single-photo">
+                <a href="TODO" type="button" class="photo_button"><b><img src="/images/photo-1.png" alt="Photo"></b></a>
+            </div>
+        </div>
 
     </section>
     <div>AAAAA</div>
