working on photos section

--- a/index.html
+++ b/index.html
@@ -115,9 +115,43 @@
     <section id="products">
         <div class="products-container">
             <div class="single-photo">
-                <a href="TODO" type="button" class="photo_button"><b><img src="/images/photo-1.png" alt="Photo"></b></a>
+                <img src="/images/photo-1.png" alt="Photo">
+                <a href="TODO" type="button" target="_blank" class="overlay">
+                <img src="/images/icon-eye.png" alt="eye">
+                </a>
+            </div>
+            <div class="single-photo">
+                <img src="/images/photo-2.png" alt="Photo">
+                <a href="TODO" type="button" target="_blank" class="overlay">
+                <img src="/images/icon-eye.png" alt="eye">
+                </a>
+            </div>
+            <div class="single-photo">
+                <img src="/images/photo-3.png" alt="Photo">
+                <a href="TODO" type="button" target="_blank" class="overlay">
+                <img src="/images/icon-eye.png" alt="eye">
+                </a>
+            </div>
+            <div class="single-photo">
+                <img src="/images/photo-4.png" alt="Photo">
+                <a href="TODO" type="button" target="_blank" class="overlay">
+                <img src="/images/icon-eye.png" alt="eye">
+                </a>
+            </div>
+            <div class="single-photo">
+                <img src="/images/photo-5.png" alt="Photo">
+                <a href="TODO" type="button" target="_blank" class="overlay">
+                <img src="/images/icon-eye.png" alt="eye">
+                </a>
+            </div>
+            <div class="single-photo">
+                <img src="/images/photo-6.png" alt="Photo">
+                <a href="TODO" type="button" target="_blank" class="overlay">
+                <img src="/images/icon-eye.png" alt="eye">
+                </a>
             </div>
         </div>
+
 
     </section>
     <div>AAAAA</div>
