--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- home end-->
 
 
-
+    <!--About Us Section -->
     <section id="about_us_front_page">
 
         <div class="about_container">
@@ -55,6 +55,7 @@
         </div>
     </section>
 
+    <!--Professional Skills Section -->
     <section id="professional_skills">
 
         <div class="professional_skills_container">
@@ -78,6 +79,7 @@
         </div>
     </section>
 
+    <!--Icons Section -->
     <section id="icons">
 
         <div class="icons_container">
@@ -112,6 +114,7 @@
         </div>
     </section>
 
+    <!--Products Section -->
     <section id="products">
         <div class="products-container">
             <div class="single-photo">
@@ -150,7 +153,39 @@
                 <img src="/images/icon-eye.png" alt="eye">
                 </a>
             </div>
+            <div class="single-photo">
+                <img src="/images/photo-7.png" alt="Photo">
+                <a href="TODO" type="button" target="_blank" class="overlay">
+                <img src="/images/icon-eye.png" alt="eye">
+                </a>
+            </div>
+            <div class="single-photo">
+                <img src="/images/photo-8.png" alt="Photo">
+                <a href="TODO" type="button" target="_blank" class="overlay">
+                <img src="/images/icon-eye.png" alt="eye">
+                </a>
+            </div>
         </div>
+        
+        <div class="load_more">
+            <a href="TODO" type="button"><p1 class="load">LOAD MORE WORK</p1></a>
+        </div>
+    </section>
+
+    <!--Work process and video Section -->
+    <section id="work_process">
+        <div class="process_container">
+            <div class="header">
+                <h1 class="text">Our Work Process</h1>
+                <p1 class="description">Was years it seasons was there form he in them together over that, third sixth gathered female creeping bearing behold years.</p1>
+            </div>
+            <div class="video">
+                <video controls src="/images/video.mp4" height="650"></video>
+            </div>
+            
+
+        </div>
+
 
 
     </section>
