--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <p1 class="description">Was years it seasons was there form he in them together over that, third sixth gathered female creeping bearing behold years.</p1>
             </div>
             <div class="video">
-                <video controls src="/images/video.mp4" height="650"></video>
+                <video controls src="/images/video.mp4"  type="video/mp4"></video>aa
             </div>
             
 
